# paperwatch

./: .gitignore  CLAUDE.md  README.md  notified_papers.json  pyproject.toml  requirements.txt  test.py  test_filter_embedding.py
.github/workflows/: daily_papers.yaml  test_config.yaml
src/: __init__.py  config.py  filter.py  filter_embedding.py  history.py  main.py  notifier.py  summarizer.py
src/fetchers/: __init__.py  biorxiv.py  pubmed.py
