[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-paper-notifier"
version = "0.1.0"
description = "Automated research paper notification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "anthropic>=0.18.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "slack-sdk>=3.0.0",
    "boto3>=1.34.0",
    "requests>=2.28.0",
]

[project.scripts]
research-notify = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
